css/style.css
*{
    text-decoration: none;
    margin: auto;
}

body{
    width: auto;
}

header{
    background-color: #e4e4e4;
    display: flex;
    width: auto;
    padding: 100px 0px 100px 0px;
    justify-content: space-between;
    align-items: flex-end;
}

#desktop-nav ul{
    display: flex;
}

#desktop-nav ul li{
    width: 127px;
    height: 40px;
    text-align: center;
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    font-size: 16px;
    list-style: none;
    border-bottom: 2px solid #542c70;
    margin-left: 38px;
}

#redes{
    position: absolute;
    right: 0;
    top: -67px;
}

#redes img{
    width: 28px;
}

#mobile-nav{
    display: none;
}

.back-text{
    font-family: 'Poppins';
    font-size: 171px;
    font-weight: bold;
    position: absolute;
    z-index: 0;
}

#bck-productos{
    color: white;
    transform: rotateZ(-90deg);
    left: -10%;
    top: 45%;
}

#bck-terminaciones{
    color: #66ffad;
    top: 45px;
    left: 75;
    z-index: 0;
}

#bck-precios{
    color: white;
    top: 4%;
    left: 0;
    right: 0;
    text-align: center;
}

#bck-quienes-somos{
    color: #66ffad;
    top: 50;
    left: -65px;
}

#bck-contactos{
    color: white;
    transform: rotateZ(-90deg);
    bottom: 260px;
    left: -114px;
}

#productos{
    display: flex;
    justify-content: flex-end;
    padding-bottom: 200px;
    position: relative;
    background-color: #e4e4e4;
    z-index: 0;
}

#logo-header{
    z-index: 1;
}

#logo-header img{
    width: 167px;
    height: 110px;
}

#productos_articulos{
    display: flex;
    flex-wrap: wrap;
    width: 1739px;
    justify-content: flex-end;
}

#productos_articulos article{
    width: 435px;
    height: 435px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 38px;
    border: 4px solid white;
    z-index: 1;
    cursor: pointer;
}

#productos_articulos img{
    position: absolute;
    box-shadow: 0 0px 17px grey;
}

#productos_articulos p{
    font-family: 'Poppins';
    font-weight: bolder;
    font-size: 25px;
    position: absolute;
    color: white;
}

#ubicacion_1{
    width: 18px;
    position: absolute;
    left: 60px;
    bottom: 60px;
}

#terminaciones{
    background-color: #0ad181;
    padding: 120px 0 120px 0;
    position: relative;
}

#terminaciones_articulos{
    display: flex;
    flex-wrap: wrap;
    text-align: center;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    width: 1368px;
}

#terminaciones_articulos article{
    margin: 100px 60px 60px 60px;
    z-index: 1;
}

#terminaciones_articulos article p{
    font-family: 'Poppins';
    font-size: 25px;
    font-weight: bold;
    margin-bottom: 20px;
}

#terminaciones_articulos article img{
    border-radius:160px;
    margin-bottom: 50px;
    box-shadow: 0 0px 17px grey;
}

#terminaciones_articulos article hr{
    width: 124px;
    border-color: #542c70;
}

#ubicacion_2{
    width: 17;
    position: absolute;
    right: 60;
    bottom: 60;
}

#precios{
    position: relative;
    background-color: #e4e4e4;
}

#precios h2{
    font-family: 'poppins';
    font-size: 65px;
    font-weight: bolder;
    color: #542c70;
}

.precio-producto p{
    font-family: 'poppins';
    font-size: 18px;
    font-weight: 300;
    color: #542c70;
    margin-bottom: 80px;
}

.tabla-precios{
    font-family: 'poppins';
    font-size: 20px;
    font-weight: bold;
    color: white;
    background-color: #542c70;
    padding: 7px;
    height: 50;
}

#tabla-modulos{
    background: none;
    color: black;
    font-family: "poppins";
}

#th-1{
    min-width: 170px;
}

#th-2{
    min-width: 100px;
}



#precios article{
    width: 607px;
    text-align: center;
    border: solid 57px #EDEDED;
    background-color: #ededed;
    box-shadow: 0 0px 17px grey;
    margin-bottom: 50px;
}

#descripcion-impresion{
    background-color: e4e4e4;
    font-family: 'poppins';
    font-size: 15px;
    font-weight: 300;
    text-align: initial;
    height: 86px;
    display: flex;
    align-items: center;
    padding-left: 35px;
}

#precio-articulos{
    display: flex;
    flex-wrap: wrap;
    position: relative;
    height: 2900px;
}

#tarjetas-stickers{
    position: absolute;
    top: 277px;
    left: 142px;
    z-index: 1;
}

#folletos-carpetas{
    position: absolute;
    top: 638px;
    right: 142px;
    z-index: 1;
}

#pie-pagina-precios{
    background-color: #e4e4e4;
    margin: 20px;
    border: solid 5px white;
    padding: 62px 50px 62px 50px;
}

#pie-pagina-precios p{
    font-family: 'poppins';
    font-size: 15px;
    font-weight: 300;
    color: #542c70;
}

#ubicacion-3{
    width: 108;
    position: absolute;
    bottom: 60px;
    right: 60px;
}

#quienes-somos{
    background-color: 0ad181;
    height: 800px;
    display: flex;
    position: relative;
}

#texto-quienes-somos{
    width: 710px;
    margin-right: 200px;
}

#texto-quienes-somos p{
    font-family: 'poppins';
    font-size: 24px;
    color: #542c70;
}

#ubicacion-4{
    position: absolute;
    width: 107;
    left: 60;
    bottom: 60;
}

#contacto{
    height: 1080px;
    background-color: #e4e4e4;
    display: flex;
    align-items: center;
    position: relative;
}

#contacto form{
    width: 1225;
    height: 681;
    display: flex;
    align-items: center;
    flex-direction: column;
    box-shadow: 0 0px 17px grey;
    z-index: 1;
    background-color: #e4e4e4;
}

#contacto form input{
    width: 1065;
    height: 60;
}

#contacto form textarea{
    height: 280;
    width: 1065;
}

#ubicacion-5{
    position: absolute;
    width: 107;
    right: 60;
    bottom: 60;
}

#footer{
    background-color: #0ad181;
    height: 480px;
    display: flex;
    position: relative;
}

#footer img{
    width: 200px;
}

.circle-productos {
    height: 1400px;
    width: 1400px;
    background-color: #0ad181;
    border-radius: 50%;
    position: absolute;
    right: -550px;
    top: -350px;
}

.circle-precios{
    height: 1100px;
    width: 1100px;
    background-color: #0ad181;
    border-radius: 50%;
    position: absolute;
    right: -550px;
    top: 49px;
    z-index: 0;
}

.circle-precios2{
    height: 1100px;
    width: 1100px;
    background-color: #0ad181;
    border-radius: 50%;
    position: absolute;
    left: -550px;
    bottom: 100px;
    z-index: 0;
}

.circle-contacto{
    height: 700px;
    width: 700px;
    background-color: #0ad181;
    border-radius: 50%;
    position: absolute;
    right: 100px;
    top: 100px;
    z-index: 0;
}

#fremont-bg-contacto{
    position: absolute;
    right: 60px;
    bottom: 60px;
}

#fremont-bg-precios{
    transform: rotateZ(-90deg);
    position: absolute;
    left: -90;
    bottom: 200px;
}

@media only screen and (max-width: 700px){

    #desktop-nav {
        display: none;
    }
    #mobile-nav {
        display: block;
    }



    #mobile-nav  input:checked  ~ ul{
        display:block;
      }

      #mobile-nav  input {
        display: none;
      }

      #mobile-nav  label {
        box-sizing: border-box;
        display: inline-block;
        border: 1px solid black;
        border-radius: 5px;
        width: 30px;
        height: 30px;
        line-height: 30px;
        font-weight: bold;
        text-align: center;
        user-select: none;
      }

      /* Estilo del boton cuando se pasa el mouse por encima*/
      #mobile-nav  label:hover{
        background: grey;
      }

      /* Estilo del boton cuando el menú está expandido*/
      #mobile-nav  input:checked ~ label {
        background: lightgrey;
      }

      #mobile-nav  ul{
        margin-top:0;
        padding: 0;
        width: 200px;
        position: absolute;
        display: none;
        transform: translate(-170px, 0px);
        background-color: white;
        border-radius: 15px;
        list-style: none;
        z-index: 2;
      }




      #mobile-nav  li {
        font-family: 'poppins';
        font-weight: bold;
        display: block;
        margin: 0;
        padding: 10px;
        list-style: none;
    }

      /*Estilo cuando el mouse pasa encima de cada link del menu*/
      #mobile-nav  li:hover {
        filter: brightness(110%);
      }
}

